src/tests/functionality/assignment_3_io_arrays_comments/valid/05_mandatory_array_initializer_1d_exact_length.c
int main() {
    int values[3] = {3, 45, -9};
    return values[1];
}
