src/tests/functionality/assignment_3_io_arrays_comments/invalid_syntax/01_mandatory_unterminated_block_comment.c
int main() {
    int x = 1;
    /* this comment is never closed
    return x;
}
